styling and bug squashing - fixed bug with due date validation where it would say user input was invalid if the month was not in the past even if the future was in the future, fixed styling with buttons, mostly adding padding, also updated the button ids for pages to be thispage versus thisbutton, mostly to avoid clashing between the study button for the decks and the studypage button

--- a/src/scss/_decksettings.scss
+++ b/src/scss/_decksettings.scss
@@ -10,10 +10,12 @@
     gap: .5rem;
 }
 
-.horizontaldiv {
+.deletedeckdiv {
     @include mixins.centered-flexbox;
     gap: 1rem;
     margin-bottom: 1em;
+
+    button{ padding: .1em; }
 }
 
 .resetbutton {
@@ -21,4 +23,5 @@
     margin: 1rem auto auto auto;
     color: red;
     border: 1px solid red;
+    padding: .2em;
 }
