--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -54,9 +54,8 @@
 }
 
 .modal-body {
-    padding: .15rem 1rem ;
+    padding: .15rem .7rem ;
     margin: .5rem 0 1rem 0;
-    width: 100%;
 
     form {
         display: flex;
@@ -98,8 +97,9 @@
 }
 
 .submitbutton {
-    width: 40%;
+    width: 50%;
     margin-left: auto;
+    padding: .1em;
 }
 
 .questiondiv,
@@ -115,12 +115,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .5em;
-    margin-top: 3em;
+    padding: .3em;
+    margin-top: 2em;
 
     button {
         font-size: .9em;
-        padding: .2em;
+        padding: .3em;
+        margin: .2em;
     }
 }
 
