--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -59,10 +59,6 @@ select {
   font: inherit;
 }
 
-button {
-  padding: .2em;
-}
-
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
